--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@contentful/rich-text-types": "^14.1.1",
     "autoprefixer": "^9.8.6",
     "gatsby-plugin-postcss": "^2.3.11",
+    "gatsby-plugin-svg-sprite-loader": "^0.1.5",
     "gatsby-transformer-remark": "^2.8.27",
     "lodash": "^4.17.19",
     "postcss-import": "^12.0.1",
     "prettier": "2.0.5",
+    "svg-sprite-loader": "^5.0.0",
     "tailwindcss": "^1.6.2"
   },
   "repository": {
