--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "@contentful/rich-text-react-renderer": "^14.1.1",
     "@contentful/rich-text-types": "^14.1.1",
     "autoprefixer": "^9.8.6",
+    "disqus-react": "^1.0.9",
     "gatsby-plugin-postcss": "^2.3.11",
+    "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-svg-sprite-loader": "^0.1.5",
     "gatsby-transformer-remark": "^2.8.28",
     "lodash": "^4.17.19",
     "postcss-import": "^12.0.1",
     "prettier": "2.0.5",
+    "react-twitter-widgets": "^1.9.5",
     "svg-sprite-loader": "^5.0.0",
     "tailwindcss": "^1.6.2"
   },
