--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
+    "deploy": "node bin/deploy.js && ./bin/deploy.sh",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
@@ -32,6 +33,7 @@
     "postcss-import": "^12.0.1",
     "prettier": "2.0.5",
     "react-twitter-widgets": "^1.9.5",
+    "s3": "^4.4.0",
     "svg-sprite-loader": "^5.0.0",
     "tailwindcss": "^1.6.2"
   },
