added comments to same tab as article

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "patriots-fan-discussion",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
   "version": "0.1.0",
   "license": "0BSD",
   "scripts": {
