--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gatsby-plugin-postcss": "^2.3.11",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-svg-sprite-loader": "^0.1.5",
+    "gatsby-source-filesystem": "^2.3.25",
     "gatsby-transformer-remark": "^2.8.28",
     "lodash": "^4.17.19",
     "postcss-import": "^12.0.1",
