--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "tailwindcss": "^1.6.2"
   },
   "devDependencies": {
-    "prettier": "2.0.5",
+    "prettier": "2.0.5"
   },
   "repository": {
     "type": "git",
