added new Font handling and preloading

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
+    "preload-fonts": "gatsby-preload-fonts",
     "old_deploy": "node bin/deploy.js && ./bin/deploy.sh",
     "deploy": "gatsby-plugin-s3 deploy --yes && aws cloudfront create-invalidation --distribution-id $CLOUDFRONT_DISTRIBUTION --paths \"/*\"",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
@@ -19,10 +20,13 @@
     "@contentful/rich-text-types": "^14.1.2",
     "autoprefixer": "^9.8.6",
     "disqus-react": "^1.0.9",
+    "fontsource-open-sans": "^3.0.9",
+    "fontsource-roboto-condensed": "^3.0.9",
     "gatsby": "^2.27.0",
     "gatsby-plugin-canonical-urls": "^2.5.0",
     "gatsby-plugin-postcss": "^2.3.13",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
+    "gatsby-plugin-preload-fonts": "^1.4.0",
     "gatsby-plugin-s3": "^0.3.8",
     "gatsby-plugin-svg-sprite-loader": "^0.1.5",
     "gatsby-source-contentful": "^2.3.56",
