--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "prettier": "2.0.5",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-timer-hook": "^3.0.5",
     "react-twitter-embed": "^4.0.4",
     "react-twitter-widgets": "^1.11.0",
     "s3": "^4.4.0",
