updated Gatsby and all dependencies

--- a/package.json
+++ b/package.json
@@ -16,34 +16,34 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "@contentful/rich-text-react-renderer": "^14.1.2",
-    "@contentful/rich-text-types": "^14.1.2",
-    "autoprefixer": "^9.8.6",
-    "disqus-react": "^1.0.9",
-    "fontsource-open-sans": "^3.0.9",
-    "fontsource-roboto-condensed": "^3.0.9",
-    "gatsby": "^2.27.0",
-    "gatsby-plugin-canonical-urls": "^2.5.0",
-    "gatsby-plugin-postcss": "^2.3.13",
+    "@contentful/rich-text-react-renderer": "^15.16.2",
+    "@contentful/rich-text-types": "^16.0.2",
+    "autoprefixer": "^10.4.13",
+    "disqus-react": "^1.1.5",
+    "fontsource-open-sans": "^4.0.0",
+    "fontsource-roboto-condensed": "^4.0.0",
+    "gatsby": "^5.3.2",
+    "gatsby-plugin-canonical-urls": "^5.3.0",
+    "gatsby-plugin-image": "^3.3.2",
+    "gatsby-plugin-postcss": "^6.3.0",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
-    "gatsby-plugin-preload-fonts": "^1.4.0",
+    "gatsby-plugin-preload-fonts": "^4.3.1",
     "gatsby-plugin-s3": "^0.3.8",
-    "gatsby-plugin-svg-sprite-loader": "^0.1.5",
-    "gatsby-source-contentful": "^2.3.56",
-    "gatsby-source-filesystem": "^2.6.0",
-    "gatsby-transformer-remark": "^2.11.0",
-    "postcss-import": "^12.0.1",
-    "prettier": "2.0.5",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "gatsby-plugin-svg-sprite-loader": "^0.2.0",
+    "gatsby-source-contentful": "^8.3.1",
+    "gatsby-source-filesystem": "^5.3.1",
+    "gatsby-transformer-remark": "^6.3.1",
+    "postcss-import": "^15.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-twitter-embed": "^4.0.4",
     "react-twitter-widgets": "^1.11.0",
     "s3": "^4.4.0",
-    "svg-sprite-loader": "^5.0.0",
-    "tailwindcss": "^1.9.6"
+    "svg-sprite-loader": "^6.0.11",
+    "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
-    "prettier": "2.0.5"
+    "prettier": "^2.8.1"
   },
   "repository": {
     "type": "git",
