rolled back to gatsby 4.24 because AWS and Netlify dont support node 18 yet

--- a/package.json
+++ b/package.json
@@ -22,23 +22,19 @@
     "disqus-react": "^1.1.5",
     "fontsource-open-sans": "^4.0.0",
     "fontsource-roboto-condensed": "^4.0.0",
-    "gatsby": "^5.3.2",
-    "gatsby-plugin-canonical-urls": "^5.3.0",
-    "gatsby-plugin-image": "^3.3.2",
-    "gatsby-plugin-postcss": "^6.3.0",
-    "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
-    "gatsby-plugin-preload-fonts": "^4.3.1",
-    "gatsby-plugin-s3": "^0.3.8",
-    "gatsby-plugin-svg-sprite-loader": "^0.2.0",
-    "gatsby-source-contentful": "^8.3.1",
-    "gatsby-source-filesystem": "^5.3.1",
-    "gatsby-transformer-remark": "^6.3.1",
+    "gatsby": "^4.24.0",
+    "gatsby-plugin-canonical-urls": "^4.24.0",
+    "gatsby-plugin-image": "^2.24.0",
+    "gatsby-plugin-postcss": "5.24.0",
+    "gatsby-plugin-preload-fonts": "^3.24.0",
+    "gatsby-source-contentful": "^7.22.0",
+    "gatsby-source-filesystem": "^4.24.0",
+    "gatsby-transformer-remark": "^5.24.0",
     "postcss-import": "^15.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-twitter-embed": "^4.0.4",
     "react-twitter-widgets": "^1.11.0",
-    "s3": "^4.4.0",
     "svg-sprite-loader": "^6.0.11",
     "tailwindcss": "^3.2.4"
   },
